# SRRROOOMMMMSD1-2

./: CMakeLists.txt  LAB1-2.sln  LAB1.docx  LAB2.docx
.github/workflows/: cmake.yml
LAB1/: BigUInt.cpp  BigUInt.hpp  LAB1.vcxproj  LAB1.vcxproj.filters
LAB1_app/: LAB1_app.vcxproj  main.cpp
bigint_tests/: bigint_tests.vcxproj  test_biguint.cpp
